Format code and remove some warnings
git-svn-id: https://gvsigce.svn.sourceforge.net/svnroot/gvsigce/branches/geotools@800 d80a0976-42e5-4521-8f91-9f5439ad514b